fix word break on gf save button

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -43,6 +43,7 @@
 	text-transform: uppercase;
 	cursor: pointer;
 	transition: 0.3s ease;
+	word-break: normal;
 
 	&:hover {
 		background: #ccc;
